tests/sources/invalid/classes/constructor_call_arg_type.fire
// Semantic error: 'new ClassName(...)' with an argument of the wrong type
// for the declared constructor.

class Point {
    x: int32;
    y: int32;

    fn Point(x: int32, y: int32) {
        this.x = x;
        this.y = y;
    }
}

fn constructor_call_arg_type() -> void {
    p: Point = new Point("bad", 5);  //~ ERROR FS-SEM-0010 @26
}
